--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chuyskywalker/rolling-curl",
+    "name": "themismin/rolling-curl",
     "description": "Rolling-Curl: A non-blocking, non-dos multi-curl library for PHP",
     "type": "library",
     "keywords": ["multi", "curl", "parallel", "requests", "asynchronous", "http"],
@@ -30,6 +30,6 @@
         "lib-curl": "*"
     },
     "autoload": {
-        "psr-0": { "RollingCurl": "src/" }
+        "psr-0": { "Themismin\\RollingCurl\\": "src/" }
     }
 }
